@@ -59,9 +59,13 @@ global $TROUBLE_URL;
 
 // Open settings file to read
 $settings = array ();
-$fd = @fopen ( "settings.php", "rb", false );
+//called from send_reminders.php
+if ( ! empty ( $includedir ) ) 
+  $fd = @fopen ( "$includedir/settings.php", "rb", true );
+else
+  $fd = @fopen ( "settings.php", "rb", true );
 if ( ! $fd )
-  $fd = @fopen ( "includes/settings.php", "rb", false );
+  $fd = @fopen ( "includes/settings.php", "rb", true );
 if ( empty ( $fd ) ) {
   // There is no settings.php file.
   // Redirect user to install page if it exists.
